<resources>
    <string name="app_name">Habito News</string>
    <string name="mainActivity_name">Habito: A more personalised news</string>
    <string name="habitoLogo">Habito</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="back_button">back</string>
    <string name="action_sync">Sync</string>
    <string name="action_logout">Log Out</string>
    <string name="action_trackers">Trackers UI</string>
    <string name="action_reviewers">Reviewers UI</string>
    <string name="action_dippers">Dippers UI</string>
    <string name="headerTitle">Adaptive News Framework</string>
    <string name="mainActivity_title">Habito News</string>
    <string name="logo_description">Habito News Logo</string>
    <string name="app_subText">Knows your preferences, helps you read news more easily</string>
    <string name="dataProtectionNumber">Data Protection Number:#####</string>
    <string name="copyright">UCL Research - 2016</string>
    <string name="search_articles">Search Articles Here</string>
    <string name="login_emailAddress">email address</string>
    <string name="login_password">password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Sign up</string>
    <string name="signIn">sign in</string>
    <string name="signUp">sign up</string>
    <string name="or">or</string>
    <string name="consent_form">
        "Thank you for agreeing to sign up with Habito News. Habito News is a research tool developed with the aim of improving peoples' news reading interactions. I agree to participate in a study that investigates mobile news reading behaviour, aiming to provide a more personalisednews service. I understand that my participation is entirely voluntary. \n\nI agree with the following points:\n\n1. The purpose of this research is to understand peoples' news reading behaviour and ultimately provide automated user interfacesthat personalise news reading experience. I understand that I will fill in a short survey after registering with Habito News and I will provide my interaction logs for a period of two-weeks.\n\n2. The procedure will be as follow: I will register with Habito News and use it as my primary mobile news app to read news. We expectfrom you to behave as you would behave normally in any other news app. The app runs a background service that collects your interactions withthe user interface of the app. In any case the app does not monitor your interactions with other apps, so you do not have to worry about privacy issues.\n\n3. The researchers do not foresee any risks to me for participating in this study, nor do they expect that I will experience any discomfort or stress.\n\n4. I understand that I may withdraw from the study at any time.\n\n5. All of the data collected will remain strictly confidential. Only people associated with the study will see my responses. My responses will not be associatedwith my name; instead, my name will be converted to a code number when the researchers store the data.\n\nBy clicking the 'I Agree the Terms and Conditions" you are agreeing to the above statement. \n\n"
 </string>
    <string name="consent_form_new">
        "Thank you for downloading Habito News...\n\n Habito News is a research tool that we use to investigate how to make a smartphone change its user interface to better suit the individual user. We are particularly interested in how people read the news on smartphones and user interfaces for news apps.\n\n We will be asking you to sign up with Habito News. The app will record hor you read the news although you won't be aware of this. It will be recording the different actions you make with the app, like choosing to read an article, the time of the day and your current location (in map coordinates). This data will be stored on our server and will be completely secure. We will not share the data with anyone or ever reveal your name to anyone. If we publish the results of the research, the data will be pooled together and will be anonymous. When the research is completed we will delete the data. The trial use of the app will last for 2 weeks after which you should delete the app from your smartphone.\n\n Please ask us (mconstantinides@cs.ucl.ac.uk) if there is anything that is not clear or if you would like more information. It is up to you to decide whether to take part of not. If you decide to take part your are still free to withdraw at any time and without giving a reason.\n\n All data will collected and stored in accordance with the Data Protection Act 1998. \n\n By clicking 'I Agree' you acknowledge that you have read and understood the above statement.
    </string>
    <string name="agree_consentform">I Agree</string>
    <string name="notagree_consentform">I do not Agree</string>
    <string name="submit_registration">Submit</string>
    <string name="cancel_registration">Cancel</string>
    <string name="next">Next</string>
    <string name="step1_note">Note: All fields are required to proceed to the Next Step of registration.</string>
    <string name="question1">Q1: How often do you read news on your mobile device?</string>
    <string name="question2">Q2: How much time a day do you spend reading news on your mobile device?</string>
    <string name="question3">Q3: How do you look for stories of interest? </string>
    <string name="question4">Q4: How do you read a news item?</string>
    <string name="question5">Q5: Where do you often read news?</string>
    <string name="question6">Q6: What time of the day do you often read news?</string>
    <string-array name="question1_answers">
        <item>Many times a day</item>
        <item>Once a day</item>
        <item>Less than once a day</item>
    </string-array>
    <string-array name="question2_answers">
        <item>0-5 minutes</item>
        <item>5-10 minutes</item>
        <item>10+ minutes</item>
    </string-array>
    <string-array name="question3_answers">
        <item>I look through all sections</item>
        <item>I look in particular section</item>
        <item>Both</item>
    </string-array>
    <string-array name="question4_answers">
        <item>Skimming</item>
        <item>Detailed Reading</item>
        <item>Scanning</item>
    </string-array>
    <string-array name="question5_answers">
        <item>Home</item>
        <item>Work</item>
        <item>Public Transport (train/bus)</item>
    </string-array>
    <string-array name="question6_answers">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
    </string-array>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="submit">Register</string>
    <string name="cancel">Cancel</string>
    <string name="intro">Sign-up with Habito News</string>
    <string name="introSub">A Habito Account lets you access more personalised news.\nYou can create an account by filling the registration form below. Habito will treat all your personal information as private and confidential and any data collected will only be used for research purposes.</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="tracked_articles">Tracked Articles</string>
    <string name="adaptive_variant_prompt">Choose an interface</string>
    <string-array name="adaptive_variants">
        <item>Baseline</item>
        <item>Trackers</item>
        <item>Reviewers</item>
        <item>Dippers</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_constent_form">ConstentForm</string>
    <string name="title_activity_questionnaire">QuestionnaireActivity</string>
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
    <string name="detected_activities_title">Detected Activities</string>
    <string name="request_activity_updates">Request updates</string>
    <string name="remove_activity_updates">Remove updates</string>
    <string name="activity_updates_added">Activity updates added</string>
    <string name="activity_updates_removed">Activity updates removed</string>
    <string name="not_connected">GoogleApiClient not yet connected. Try again.</string>
    <string name="title_activity_sus_questionnaire_step1">SUS_Questionnaire Step1</string>
    <string name="title_activity_sus_questionnaire_step2">SUS_Questionnaire Step2</string>
    <string name="title_activity_comparison_questionnaire_step1">Comparison_Questionnaire Step1</string>
    <string name="title_activity_comparison_questionnaire_step2">Comparison_Questionnaire Step2</string>
    <string name="sus_submit">Submit</string>
    <string name="sus_cancel">Cancel</string>
    <string name="sus_next">Next</string>
    <string name="sus_step1_note">Note: Answer to all questions.</string>
    <string name="sus_question1">1.	I would be happy to use Habito News as my primary source of online news.</string>
    <string name="sus_question6">6.	Habito News is inconsistent in the way it displays similar kinds of things (headlines and articles, etc) in different ways and in the way you have to do the same kinds of activities (browsing, reading, selecting, etc) in different ways.</string>
    <string name="sus_question7">7.	I would imagine that most people would quickly work out to use Habito News to check headlines and read news reports.</string>
    <string name="sus_question8">8.	With Habito News it is awkward to browse headlines and choose articles to read.</string>
    <string name="sus_question9">9.	I am always confident with Habito News that I know how to find the news I am interested in and how to do all the activities available to me.</string>
    <string name="sus_question10">10. I needed to work out quite a lot of things about Habito News before I could get going with it to check and read the news.</string>
    <string name="comparison_question6">6. Which environment helps you read all the news stories of interest more easily?</string>
    <string name="comparison_question7">7. Which environment makes it harder to remember at which point you are whilst browsing the news?</string>
    <string name="comparison_question8">8. Which environment contains more unnecessary features?</string>
    <string name="comparison_question9">9. Which environment makes you feel more in control while using it?</string>
    <string name="comparison_question10">10. Which environment has better presentation of stories and organisation of menu navigation system that meets your news reading habits?</string>
</resources>